3rdparty/glsl-optimizer/src/glsl/glcpp/tests/091-hash-line.c
#line 0
#error line 0 error
#line 25
#error line 25 error
#line 0 1
#error source 1, line 0 error
#line 30 2
#error source 2, line 30 error
